show cmake version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,11 +47,11 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 
 # specify test-specific libraries
-find_library(GTEST NAMES gtest)
-find_library(GTEST_MAIN NAMES gtest_main)
+#find_library(GTEST NAMES gtest)
+#find_library(GTEST_MAIN NAMES gtest_main)
 find_path(GTEST_INCLUDE "gtest/gtest.h")
 target_include_directories(tests PRIVATE ${GTEST_INCLUDE})
-target_link_libraries(tests PRIVATE ${GTEST} ${GTEST_MAIN} -pthread)
+target_link_libraries(tests PRIVATE gtest_main -pthread)
 
 install(TARGETS tests DESTINATION .)
 
