--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,7 +24,7 @@ jobs:
         sudo apt install build-essential manpages-dev software-properties-common
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
         sudo apt update && sudo apt install gcc-11 g++-11
-        message(STATUS "Using host CMake version: ${CMAKE_VERSION}")
+        cmake --version
 
     
     - name: Configure CMake
