--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,7 +18,10 @@ jobs:
     runs-on: [ubuntu-latest]
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        submodules: 'true'
     - name: Install requirements
       run: |
         sudo apt install build-essential manpages-dev software-properties-common
@@ -40,5 +43,5 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: env GTEST_COLOR=1 ctest -C ${{env.BUILD_TYPE}}
+      run: env GTEST_COLOR=1 ctest -C ${{env.BUILD_TYPE}} --verbose
       
