--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,7 @@ install(TARGETS example_print DESTINATION .)
 include(FetchContent)
 FetchContent_Declare(
     googlebench
-    GIT_REPOSITORY git@github.com:google/benchmark.git
-    GIT_TAG 0d98dba29d66e93259db7daa53a9327df767a415 #v1.6.1
+    URL https://github.com/google/benchmark/archive/refs/tags/v1.6.1.zip
 )
 # For Windows: Prevent overriding the parent project's compiler/linker settings
 FetchContent_MakeAvailable(googlebench)
