--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,8 +41,7 @@ jobs:
       run: make tests
 
     - name: Test
-      working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: env GTEST_COLOR=1 ctest -C ${{env.BUILD_TYPE}} --verbose
+      run: make test 
       
