--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,5 +43,5 @@ jobs:
     - name: Test
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: make test 
+      run: make check
       
