--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,5 +41,5 @@ jobs:
       run: make tests
 
     - name: Test
-      run: ./bin/tests --gtest_repeat=100 --gtest_break_on_failure
+      run: ./bin/tests --gtest_repeat=100 --gtest_break_on_failure --gtest_brief=1
       
