--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,4 +1,4 @@
-name: Ubuntu GCC
+name: Build
 
 on:
   push:
@@ -11,11 +11,20 @@ env:
   BUILD_TYPE: Release
     
 jobs:
-  build:
+  linux:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, ubuntu-20.04]    
+        compiler:
+          - { compiler: GNU, CC: gcc-11, CXX: g++-11 }
+          - { compiler: LLVM, CC: clang-10, CXX: clang++-10 }
+        exclude:
+          - os: ubuntu-20.04
+            compiler: { compiler: LLVM, CC: clang-10, CXX: clang++-10 }
 
     steps:
     - name: Checkout
@@ -26,103 +35,17 @@ jobs:
       run: |
         sudo apt install build-essential manpages-dev software-properties-common
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-        sudo apt update && sudo apt install gcc-11 g++-11
+        sudo apt update && sudo apt install ${{ matrix.compiler.CC }} ${{ matrix.compiler.CXX }}
         cmake --version
 
     
     - name: Configure CMake
+      env:
+        CC: ${{ matrix.compiler.CC }}
+        CXX: ${{ matrix.compiler.CXX }}
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -DBENCHMARK_ENABLE_GTEST_TESTS=OFF -CMAKE_C_COMPILER=gcc-11 -CMAKE-CXX_COMPILER=g++11
-
-
-    - name: Build
-      # Build your program with the given configuration
-      run: make tests
-
-    - name: Test
-      run: ./bin/tests --gtest_repeat=100 --gtest_break_on_failure --gtest_brief=1
-      
-name: Ubuntu clang
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
-    
-jobs:
-  build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: [ubuntu-latest]
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        submodules: 'true'
-    - name: Install requirements
-      run: |
-        sudo apt install build-essential manpages-dev software-properties-common
-        sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-        sudo apt update && sudo apt install clang-12
-        cmake --version
-
-    
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -DBENCHMARK_ENABLE_GTEST_TESTS=OFF -CMAKE_C_COMPILER=clang-12 -CMAKE-CXX_COMPILER=clang++12
-
-
-    - name: Build
-      # Build your program with the given configuration
-      run: make tests
-
-    - name: Test
-      run: ./bin/tests --gtest_repeat=100 --gtest_break_on_failure --gtest_brief=1
-
-name: MacOS GCC
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
-    
-jobs:
-  build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: [macos-latest]
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        submodules: 'true'
-    - name: Install requirements
-      run: |
-        brew update
-        brew install gcc@11 cmake
-        cmake --version
-
-    
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -DBENCHMARK_ENABLE_GTEST_TESTS=OFF -CMAKE_C_COMPILER=clang-12 -CMAKE-CXX_COMPILER=clang++12
+      run: cmake -DBENCHMARK_ENABLE_GTEST_TESTS=OFF ./
 
 
     - name: Build
