--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
+  BUILD_TYPE: RelWithDebInfo
     
 jobs:
   linux:
@@ -31,6 +31,8 @@ jobs:
             compiler: { compiler: LLVM, CC: clang-10, CXX: clang++-10 }
 
     steps:
+    - name: Cancel Workflow Action
+      uses: styfle/cancel-workflow-action@0.9.1
     - name: Checkout
       uses: actions/checkout@v2
       with:
