--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -38,8 +38,8 @@ jobs:
       run: |
         sudo apt install build-essential manpages-dev software-properties-common
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-        sudo apt update && sudo apt install ${{ matrix.compiler.CC }} ${{ matrix.compiler.CXX }}
-        pip install lcov
+        sudo apt update && sudo apt install lcov ${{ matrix.compiler.CC }} ${{ matrix.compiler.CXX }}
+        pip install --user lcov
         cmake --version
 
     
