no more cool comments ):

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -64,11 +64,11 @@ jobs:
         lcov --directory CMakeFiles/tests.dir/src/unit-tests/ --gcov-tool /usr/bin/gcov-11 --output-file lcov.out --include "*bitlib*" -c
         lcov -r lcov.out "*/usr/*" -r lcov.out "*_deps/*" -r lcov.out "*unit-tests*" -r lcov.out "*ext/*" -o lcov_filtered.out
 
-    - name: Code Coverage Report
-      uses: romeovs/lcov-reporter-action@v0.2.11
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        lcov-file: lcov_filtered.out
+    #- name: Code Coverage Report
+      #uses: romeovs/lcov-reporter-action@v0.2.11
+      #with:
+        #github-token: ${{ secrets.GITHUB_TOKEN }}
+        #lcov-file: lcov_filtered.out
 
     - name: Coveralls
       uses: coverallsapp/github-action@master
