--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,6 +37,11 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: 'true'
+    - name: Install LLVM 
+      uses: KyleMayes/install-llvm-action@v1
+      with:
+        version: "11.0"
+        ubuntu-version: ${{ matrix.os }}
     - name: Install requirements
       run: |
         sudo apt install build-essential manpages-dev software-properties-common
