--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set_property(GLOBAL PROPERTY CXX_STANDARD 17)
 set_property(GLOBAL PROPERTY CXX_STANDARD_REQUIRED true)
 
+# set up linters/checkers
+set(CMAKE_CXX_CPPCHECK cppcheck;--std=c++17;--file-filter=*bitlib*)
+set(CMAKE_CXX_CPPLINT cpplint;--linelength=100;”)
+#set(CMAKE_CXX_CLANG_TIDY 
+  #clang-tidy;
+  #-header-filter=include/;)
+
 # specify global compiler flags
 add_compile_options(-march=native -pedantic -Wall -Wextra -Wfatal-errors)
 include_directories("include/" "ext/simdpp")
