--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -34,32 +34,47 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: 'true'
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        miniconda-version: "latest"
+        activate-environment: test
+        channels: conda-forge,defaults
+        channel-priority: true
+        python-version: 3.8 
     - name: Install requirements
+      shell: bash -l {0}
       run: |
         sudo apt install build-essential manpages-dev software-properties-common
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
         sudo apt update && sudo apt install lcov ${{ matrix.compiler.CC }} ${{ matrix.compiler.CXX }}
+        conda activate test
         pip install --user lcov
+        conda install cppcheck cpplint
         cmake --version
 
-    
     - name: Configure CMake
+      shell: bash -l {0}
       env:
         CC: ${{ matrix.compiler.CC }}
         CXX: ${{ matrix.compiler.CXX }}
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -DBENCHMARK_ENABLE_GTEST_TESTS=OFF ./
+      run: |
+        which cpplint
+        cmake -DBENCHMARK_ENABLE_GTEST_TESTS=OFF -DCMAKE_CXX_CPPCHECK="cppcheck;--std=c++17;--file-filter=*BitLib*" -DCMAKE_CXX_CPPLINT="cpplint;--linelength=100;" ./
 
 
     - name: Build
+      shell: bash -l {0}
       # Build your program with the given configuration
       run: make tests
 
     - name: Test
+      shell: bash -l {0}
       run: ./bin/tests --gtest_repeat=10 --gtest_break_on_failure --gtest_brief=1
 
     - name: Run lcov 
+      shell: bash -l {0}
       run: |
         lcov --directory CMakeFiles/tests.dir/src/unit-tests/ --gcov-tool /usr/bin/gcov-11 --output-file lcov.out --include "*bitlib*" -c
         lcov -r lcov.out "*/usr/*" -r lcov.out "*_deps/*" -r lcov.out "*unit-tests*" -r lcov.out "*ext/*" -o lcov_filtered.out
