equal and a whole lotta other stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,18 @@ set_property(GLOBAL PROPERTY CXX_STANDARD_REQUIRED true)
   #clang-tidy;
   #-header-filter=include/;)
 
+# 
 # specify global compiler flags
 add_compile_options(-march=native -pedantic -Wall -Wextra -Wfatal-errors)
 include_directories("include/" "ext/simdpp")
+
+# Add fmt library (useful for printing words in binary and other debugging stuff)
+include(FetchContent)
+FetchContent_Declare(
+    fmt
+    URL https://github.com/fmtlib/fmt/archive/refs/tags/8.1.1.tar.gz
+)
+FetchContent_MakeAvailable(fmt)
 
 # Add targets
 file(GLOB TEST_SOURCES "src/unit-tests/*.cpp")
@@ -53,7 +62,7 @@ FetchContent_MakeAvailable(googlebench)
 
 # specify benchmark-specific libraries
 include_directories(${googlebench_SOURCE_DIR}/benchmark/include src/utils)
-target_link_libraries(bench PRIVATE benchmark::benchmark -pthread)
+target_link_libraries(bench PRIVATE benchmark::benchmark -pthread fmt::fmt-header-only)
 
 target_compile_options(bench PUBLIC -O3 -DNDEBUG -mtune=native)
 install(TARGETS bench DESTINATION .)
@@ -75,7 +84,7 @@ FetchContent_MakeAvailable(googletest)
 
 # specify test-specific libraries
 include_directories(${googletest_SOURCE_DIR}/googletest/include/gtest src/utils)
-target_link_libraries(tests PRIVATE gtest gtest_main -pthread -lgcov --coverage -fsanitize=address)
+target_link_libraries(tests PRIVATE gtest gtest_main -pthread -lgcov --coverage -fsanitize=address fmt::fmt-header-only)
 
 install(TARGETS tests DESTINATION .)
 
