--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -67,11 +67,11 @@ jobs:
     - name: Build
       shell: bash -l {0}
       # Build your program with the given configuration
-      run: make bit-tests
+      run: make bitlib-tests
 
     - name: Test
       shell: bash -l {0}
-      run: ./bin/bit-tests --gtest_repeat=10 --gtest_break_on_failure --gtest_brief=1
+      run: ./bin/bitlib-tests --gtest_repeat=10 --gtest_break_on_failure --gtest_brief=1
 
     - name: Run lcov 
       shell: bash -l {0}
