--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,85 +25,41 @@ set(CMAKE_CXX_STANDARD_REQUIRED OFF)
   #clang-tidy;
   #-header-filter=include/;)
 
-# 
-# specify global compiler flags
-add_compile_options(-march=native -pedantic -Wall -Wextra -Wfatal-errors)
-include_directories("include/" "ext/simdpp")
 
-# Add fmt library (useful for printing words in binary and other debugging stuff)
-include(FetchContent)
-FetchContent_Declare(
-    fmt
-    URL https://github.com/fmtlib/fmt/archive/refs/tags/8.1.1.tar.gz
-)
-FetchContent_MakeAvailable(fmt)
-
-# Add targets
-file(GLOB_RECURSE BITLIB_HEADERS "include/bitlib/" "*.hpp")
-file(GLOB TEST_SOURCES "src/unit-tests/*.cpp")
-add_executable(bitlib-tests ${TEST_SOURCES})
-file(GLOB BENCH_SOURCES "src/benchmarks/*.cc")
-add_executable(bitlib-bench ${BENCH_SOURCES})
-# Example targets
-file(GLOB EXAMPLE1_SOURCES "example/print.cpp")
-add_executable(bitlib-example-print ${EXAMPLE1_SOURCES})
 add_library(bitlib INTERFACE)
 add_library(bitlib::bitlib ALIAS bitlib)
-
-###########
-# Library #
-###########
-target_include_directories(bitlib INTERFACE include/ ext/simdpp)
-target_sources(bitlib INTERFACE ${BITLIB_HEADERS})
-
-############
-# Examples #
-############
-target_compile_options(bitlib-example-print PUBLIC ${DEBUG_FLAGS})
-install(TARGETS bitlib-example-print DESTINATION .)
-
-################
-# Benchmarking #
-################
-include(FetchContent)
-FetchContent_Declare(
-    googlebench
-    URL https://github.com/google/benchmark/archive/refs/tags/v1.6.1.zip
+target_include_directories(bitlib INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-FetchContent_MakeAvailable(googlebench)
 
-# specify benchmark-specific libraries
-include_directories(${googlebench_SOURCE_DIR}/benchmark/include src/utils)
-target_link_libraries(bitlib-bench PRIVATE benchmark::benchmark -pthread fmt::fmt-header-only)
+if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+    # We're in the root, define additional targets for developers.
 
-target_compile_options(bitlib-bench PUBLIC -O3 -DNDEBUG -mtune=native)
-install(TARGETS bitlib-bench DESTINATION .)
+    # specify global compiler flags
+    add_compile_options(-march=native -pedantic -Wall -Wextra -Wfatal-errors)
+    include_directories("include/" "src/utils/" "ext/simdpp")
 
+    # Add fmt library (useful for printing words in binary and other debugging stuff)
+    include(FetchContent)
+    FetchContent_Declare(
+        fmt
+        URL https://github.com/fmtlib/fmt/archive/refs/tags/8.1.1.tar.gz
+    )
+    FetchContent_MakeAvailable(fmt)
 
-###########
-# Testing #
-###########
-# specify test-specific flags
-target_compile_options(bitlib-tests PUBLIC ${DEBUG_FLAGS})
+    option(BITLIB_BENCHMARK "Build bitlib benchmarks" OFF)
+    option(BITLIB_EXAMPLE "Build bitlib examples" OFF)
+    option(BITLIB_TEST "Build bitlib tests" OFF)
 
-include(FetchContent)
-FetchContent_Declare(
-    googletest
-    URL https://github.com/google/googletest/archive/e2239ee6043f73722e7aa812a459f54a28552929.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-FetchContent_MakeAvailable(googletest)
-
-# specify test-specific libraries
-include_directories(${googletest_SOURCE_DIR}/googletest/include/gtest src/utils)
-target_link_libraries(bitlib-tests PRIVATE gtest gtest_main -pthread -lgcov --coverage -fsanitize=address fmt::fmt-header-only)
-
-install(TARGETS bitlib-tests DESTINATION .)
-
-enable_testing()
-add_custom_target(bitlib-check
-    COMMAND env CTEST_OUTPUT_ON_FAILURE=1 GTEST_COLOR=1 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/bitlib-tests
-    DEPENDS bitlib-tests)
-
+    if(BITLIB_BENCHMARK)
+        add_subdirectory(benchmark)
+    endif()
+    if(BITLIB_EXAMPLE)
+        add_subdirectory(example)
+    endif()
+    if(BITLIB_TEST)
+        add_subdirectory(test)
+    endif()
+endif()
 
