--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,10 @@
 # Testing #
 ###########
 
-file(GLOB TEST_SOURCES "src/unit-tests/*.cpp")
+find_package(GTest REQUIRED)
+include(GoogleTest)
+
+file(GLOB TEST_SOURCES "src/*.cpp")
 add_executable(bitlib-tests ${TEST_SOURCES})
 
 # specify test-specific flags
@@ -13,9 +16,13 @@ target_compile_options(bitlib-tests PUBLIC ${DEBUG_FLAGS})
 include_directories(${googletest_SOURCE_DIR}/googletest/include/gtest src/utils)
 target_link_libraries(bitlib-tests PRIVATE gtest gtest_main -pthread -lgcov --coverage -fsanitize=address fmt::fmt-header-only)
 
-install(TARGETS bitlib-tests DESTINATION .)
+set(BITLIB_GTEST_REPEAT 1)
 
 enable_testing()
-add_test(bitlib-check
-    COMMAND env CTEST_OUTPUT_ON_FAILURE=1 GTEST_COLOR=1 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/bitlib-tests
-    DEPENDS bitlib-tests)
+gtest_discover_tests(
+    bitlib-tests
+    EXTRA_ARGS --gtest_repeat=${BITLIB_GTEST_REPEAT})
+
+#add_test(bitlib-check
+    #COMMAND env CTEST_OUTPUT_ON_FAILURE=1 GTEST_COLOR=1 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/bitlib-tests
+    #DEPENDS bitlib-tests)
