--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,9 +22,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04]    
+        os: [ubuntu-20.04, ubuntu-22.04]    
         compiler:
           - { compiler: GNU, CC: gcc-11, CXX: g++-11 }
+          - { compiler: GNU, CC: gcc-12, CXX: g++-12 }
 
     steps:
     - name: Cancel Workflow Action
@@ -38,6 +39,7 @@ jobs:
         sudo apt install build-essential manpages-dev software-properties-common
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
         sudo apt update && sudo apt install ${{ matrix.compiler.CC }} ${{ matrix.compiler.CXX }}
+        sudo apt-get install libgtest-dev
         cmake --version
 
     
@@ -47,13 +49,14 @@ jobs:
         CXX: ${{ matrix.compiler.CXX }}
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -DBENCHMARK_ENABLE_GTEST_TESTS=OFF ./
+      run: cmake -Bbuild -DBITLIB_TEST=1 -DBITLIB_GTEST_REPEAT=10
 
 
     - name: Build
       # Build your program with the given configuration
-      run: make bitlib-tests
+      run: cmake --build build -- -j
 
     - name: Test
-      run: ./bin/bitlib-tests --gtest_repeat=10 --gtest_break_on_failure --gtest_brief=1
+      run: ctest --test-dir build -j $(nproc --all)
+      #run: ./bin/bitlib-tests --gtest_repeat=10 --gtest_break_on_failure --gtest_brief=1
       
