Add dynamic_bitset and bitarray to benchmarks

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -12,9 +12,15 @@ set(CMAKE_BUILD_TYPE Release)
 file(GLOB BENCH_SOURCES "src/*.cc")
 add_executable(bitlib-bench ${BENCH_SOURCES})
 
+add_subdirectory(ext/dynamic_bitset)
+
 # specify benchmark-specific libraries
-include_directories(${googlebench_SOURCE_DIR}/benchmark/include src/utils)
-target_link_libraries(bitlib-bench PRIVATE benchmark::benchmark -pthread)
+include_directories(
+    ${googlebench_SOURCE_DIR}/benchmark/include 
+    src/utils
+    ext/BitArray 
+    ext/itsy_bitsy/include)
+target_link_libraries(bitlib-bench PRIVATE benchmark::benchmark -pthread ${CMAKE_CURRENT_LIST_DIR}/ext/BitArray/libbitarr.a sul::dynamic_bitset)
 
 target_compile_options(bitlib-bench PUBLIC -O3 -DNDEBUG -march=native -Wpedantic)
 install(TARGETS bitlib-bench DESTINATION .)
