Add profile option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ option(BITLIB_HWY "Build with google highway SIMD extensions" OFF)
 option(BITLIB_BENCHMARK "Build bitlib benchmarks" OFF)
 option(BITLIB_EXAMPLE "Build bitlib examples" OFF)
 option(BITLIB_TEST "Build bitlib tests" OFF)
+option(BITLIB_PROFILE "Buid simple example for profiling" OFF)
 option(BITLIB_COVERAGE "Compute test coverage" OFF)
 
 if (BITLIB_HWY)
@@ -62,5 +63,9 @@ endif()
 if(BITLIB_TEST)
     enable_testing()
     add_subdirectory(test)
+endif()
+
+if(BITLIB_PROFILE)
+    add_subdirectory(profile)
 endif()
 
