Fix repeat test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,7 +25,9 @@ endif()
 include_directories(${googletest_SOURCE_DIR}/googletest/include/gtest src/utils)
 target_link_libraries(bitlib-tests PUBLIC GTest::gtest GTest::gtest_main -pthread -lgcov --coverage)
 
-set(BITLIB_GTEST_REPEAT 1)
+if (NOT BITLIB_GTEST_REPEAT)
+    set(BITLIB_GTEST_REPEAT 1)
+endif()
 
 enable_testing()
 gtest_discover_tests(
